--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,31 +63,6 @@
   font-size: 22px;
 }
 
-/* #header input[type="checkbox"] {
-  display: none;
-  position: absolute;
-  top: 38px;
-  right: 15px;
-}
-
-.show-menu {
-  color: #edf5e0;
-  background-color: #5cdb94;
-  padding: 18px 10px;
-  height: 46px;
-  width: 80px;
-  background-image: none;
-  display: none;
-  position: relative;
-  float: right;
-  z-index: 99;
-  text-align: center;
-  font-size: 12px !important;
-  line-height: 1;
-  text-transform: uppercase;
-  cursor: pointer;
-  font-weight: 700;
-} */
 
 .header-logo-next .header-icon-right {
   float: left;
@@ -221,7 +196,7 @@
 
 .elementor-hero-img {
   background-color: #202020;
-  background-image: url(http://themestate.com/demo/culturepress/wp-content/uploads/2021/09/pexels-daian-gan-102127.jpg);
+  background-image: url("../img/pexels-daian-gan-102127.jpg");
   background-position: top right;
   background-size: cover;
   position: relative;
